tests/invalid/use_type_as_symbol.ar
fn main()
{
    let u8: u8;
}
